# ChangeLog for dev-python/httplib2
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/httplib2/ChangeLog,v 1.31 2012/12/20 07:35:45 radhermit Exp $

*httplib2-0.7.7 (20 Dec 2012)

  20 Dec 2012; Tim Harder <radhermit@gentoo.org> +httplib2-0.7.7.ebuild:
  Version bump. Migrate to distutils-r1.

*httplib2-0.7.6 (21 Sep 2012)

  21 Sep 2012; Tim Harder <radhermit@gentoo.org> +httplib2-0.7.6.ebuild:
  Version bump.

  02 Aug 2012; Sébastien Fabbro <bicatali@gentoo.org> httplib2-0.7.4.ebuild:
  Keyword amd64-linux and x86-linux

*httplib2-0.7.4 (11 Apr 2012)

  11 Apr 2012; Patrick Lauer <patrick@gentoo.org> +httplib2-0.7.4.ebuild:
  Bump for #410803, restricting tests

*httplib2-0.7.2 (30 Nov 2011)

  30 Nov 2011; Jesus Rivero <neurogeek@gentoo.org> +httplib2-0.7.2.ebuild:
  Version bump. Dropped support for Py3.

  24 Sep 2011; Fabian Groffen <grobian@gentoo.org> httplib2-0.7.1.ebuild:
  Marked ~x64-macos

*httplib2-0.7.1 (20 Jul 2011)

  20 Jul 2011; Tim Harder <radhermit@gentoo.org> +httplib2-0.7.1.ebuild:
  Version bump (imported from python overlay).

  09 Oct 2010; Samuli Suominen <ssuominen@gentoo.org> httplib2-0.6.0.ebuild:
  ppc64 stable wrt #324077

  14 Aug 2010; Raúl Porcel <armin76@gentoo.org> httplib2-0.6.0.ebuild:
  alpha/ia64/sparc stable

  06 Jul 2010; Samuli Suominen <ssuominen@gentoo.org> httplib2-0.6.0.ebuild:
  Keyword ~ppc64 wrt #323847

  22 May 2010; Raúl Porcel <armin76@gentoo.org> httplib2-0.5.0.ebuild,
  httplib2-0.6.0.ebuild:
  Add ~arm

  22 May 2010; Raúl Porcel <armin76@gentoo.org> httplib2-0.5.0.ebuild,
  httplib2-0.6.0.ebuild:
  Add ~alpha/~ia64/~sparc

  08 Mar 2010; Dirkjan Ochtman <djc@gentoo.org> httplib2-0.6.0.ebuild:
  stable amd64, bug 302674

  08 Mar 2010; Dirkjan Ochtman <djc@gentoo.org> httplib2-0.6.0.ebuild:
  Added a src_test() function to 0.6.0.

  23 Feb 2010; Christian Faulhammer <fauli@gentoo.org>
  httplib2-0.6.0.ebuild:
  stable x86, bug 302674
