@@ -2,27 +2,21 @@
 Hash: SHA256
 
 DIST httplib2-0.6.0.tar.gz 53800 SHA256 58de068e5af5661c566abb871a75133cc8297e6473ff3f15e98079d57da3978c SHA512 5f90ad3423fcdf087288c9ad299c200d8855416c916b5d6d25fbf3d6f5769ec8df98e3a4b80705df5344a4143fcd20931b852f255c4dae70be0c4cc8210e7bbf WHIRLPOOL 51ca950eabfed081d6d8b05c95e26fc1f1fa9a988920d507f3934023a71adde5b0385f29473dc4fa19e7482faf5305f517a77b3ae63b0195e0cdfb90f82db7b3
-DIST httplib2-0.7.1.tar.gz 84611 SHA256 140016f5d520b916df5d98af7f424ba8866ffe4cccd9b9c2804b57c61445ded7 SHA512 aab20558042fb110a564df1ef83f388ef98c565352e02817cbd31f668e04add77b6ed44b6fb1dd74b8a17dcbbe25b4280e6d35d44bdddc4faa4f8587f9d3b98b WHIRLPOOL 963f92be976e2c4abceb4c4b8c44d94257e56595f1a3df3170035e49c03687b8167c3d400508e988a51a2704d2bad85eb2d4b0304bf75228596168491b84e757
-DIST httplib2-0.7.2.tar.gz 87310 SHA256 050e54bd4e406c7b7951ca9812a3ee6eb242666368e325fed5a295280482966b SHA512 ea7000d0203f48378295817a0adf50a9dcce3bb27b18e32ad81623b64792d490a7d45ce513cecdd00b508b6c7fa94b59458628275509d59d97da503f273d5afd WHIRLPOOL 5b83065791739b83829c1032f3fb917387326bfd5c6fddf962e5dc2175dde6edbfa1377e5ccfeb98577a2ead2062d579e2d86a7a5cf08d0b950cadb1c5086797
-DIST httplib2-0.7.4.tar.gz 110136 SHA256 d268909d2df54098ec426fafc93a933adac7b713a4edb99113ba706a43882a91 SHA512 ad269ab4851b5b5dfa3e54a4886452a2cc81b1472343e2ac0fdf00eca1f71e6d658875ca7d30f092f448330df83cd8ecc05634d0c2b4a3ac2992d9c77fbe30aa WHIRLPOOL d89eb22135483876bcab53ecc26e5ad3a76f8d7275d91a27668bfc412e508c2d554d02aee37315a22ebf8cb94d46e04e16b224b9bf9b88945af578d4501ca8fb
 DIST httplib2-0.7.6.tar.gz 141916 SHA256 baa7bf431fa9d3c1016562de717e1ebb322a99df72a2918f6b5b8f65fa65bc2e SHA512 024898922a77780184ba454f80cb2ab05a10ca75cddc1d1b5b86aae83a47ad1daa23dd3aacaea1d50d70de18ae3f776977ccc5cff1ab7d48a959d47ded554eae WHIRLPOOL 93827c86efb78fa6082b220b36dcb61b003f33292c6ecffadf99f477d565bdc25b53f82a1111e1877aea6522fce6b9864d1841d125d1a215ad1e20f1fb62cc74
 DIST httplib2-0.7.7.tar.gz 144020 SHA256 2e2ce18092c32d1ec54f8a447e14e33585e30f240b883bfeeca65f12b3bcfaf6 SHA512 686400092bdc3f5aa1ee809ebb1c3ea52995523eb58926c26401dcdadef3de6bd17241531e1fdc01f649a07b92071bd3d136e50aa9f9c8aa6fa4fdd8cdc31ab4 WHIRLPOOL 4217917e358c982a88e41b60ace246730ffb925cfa21099879bf92013456f5feb46f33d9e6b20398e828369507069f903b3d84038bd95688310f1fb861326925
 EBUILD httplib2-0.6.0.ebuild 815 SHA256 1d364b7b298d4fef6a5c4e49ee9c0e10eb4cac9b6a3b7ebd8b6ce6029c5e6493 SHA512 ec4ab5e3fd5fd382ebd3a7ae5bf5d4a6e310985e41415f1e914abe9cad26308fbf06ea73c8bfe5b57d79c2d037fd0b85dfcd0cc7975209565a405ca0a4e8a9c7 WHIRLPOOL 6c69df8cfb0e9cf9974381711c63143343ed861b19a7ae40de0c90b7c82bc42686d594dbfeb1a6be5c70c4aaa823aa5670e32da7c342ec4512cb71f1d1e951a7
-EBUILD httplib2-0.7.1.ebuild 1129 SHA256 3fac51443c3691103e61805d78571195b463cbd76756eb38d32bc06bac1ab74e SHA512 961e4ccd23b0bb2542df460c4523d32f473b5d1ab7a06595c5feb92bdbbc172c592d571a94ecbb5bd41ce0d9d7d8b96645b06171e3bb28dd38a075e353081f79 WHIRLPOOL c1cdaebd3bd74de9bdb87a55bb5681442f0c60298f99554ea7ae83cddd69c4476fdfaca199c773112e5d2f7bf8b006f0c8def5bc6a45571bce32b3cf89890ce3
-EBUILD httplib2-0.7.2.ebuild 879 SHA256 f9442555c202f9403ea03fa00007898e4301a70f6a9cc3313bb6ea8622877cdd SHA512 5a273dfe7edc3c81f80356d6abdc0c0208425f90663aff1b4dcc136e9cb0c60b4ccf8f70f394fb9e82a0cc66753457c3101a7719225bc661634e436dcf18f139 WHIRLPOOL bb8b6012d1953fbc00942a4b4d6e823a721fb84565cc15ced5a0114849d98e2a6c2063285a251ec8abb3fc9629dced4fb05c33b3d4fe0fffb4c246548b84a5b9
-EBUILD httplib2-0.7.4.ebuild 980 SHA256 8905fb59fb6f003f373ad655fa83c56b31b0d81eb6bb834332bc461bfa441980 SHA512 0ad7acf14c7f1104f6448ed7cf53e273c27f6befdf9ebd326c8db28f98acd0d0219856a7de44481bb862fb7d101cdc112c7244a38e0b8528fc22a05c568104bd WHIRLPOOL be2c54b250d409ad1c7648a99ec9207c7b87ec8ccbf18ec74a8b42335ceaa447997166dba2d0e2f274927b0cd7b84315e14b2d7c163e81a58ef0b1bf676d65e4
 EBUILD httplib2-0.7.6.ebuild 900 SHA256 db1717642eab4bd1c82db43170000ddb2c4d6a55bf56b42e9aa4b622338282d3 SHA512 cd214f264eb82134aeaf1df7c5724f7121a0e8f010b4a3131d92e0db2dd20977c0e383d27e879733d621b725f5e291ebe037e60596854c870d22968b71698aba WHIRLPOOL c47f5b8daa78c1d034da7d553b16b557516c2ea1bdf662a622066b49bc473494307e460e59ace5488dff4b5bacf39b7715cc7117f745f4761e878f0818a9406b
 EBUILD httplib2-0.7.7.ebuild 813 SHA256 3eec0ecb18fc92fa3d9aaff4f1b3535638e248e67cdfb26b4c75b2f0927ab808 SHA512 87908617d110a5ddab071e3ae8e65b2c1b078acbca3f2e4942e47efec864cde1f4073b61aae36bca932749662c500bcd9966549186bab1f54c60a48b6cae3ff5 WHIRLPOOL c6582c78f109070daff0ce8851e9fdc29532580ed25db1056890a3407fc891a9aaea85ca3f036279f5a5ef171812f7fda0bb6ebaacc504f31ffdff794231a237
-MISC ChangeLog 4200 SHA256 3a187e112be40396f33b39ca436d507c9db1e52d5aec592f5f27af9cd05cfaf2 SHA512 b70a8ec4810e8521aac1600af2a9d09898fc41501415cc92160f96552ea2e05d0f0b890ccdf4b673b29cb66678091d07feda8fb71ef361e40a7db8774e0524f1 WHIRLPOOL 5ec5a0f316979fcd3819bd99a64bc68c8d74963586ac3590d65463c4a02362c66c9b32f46c717c9e8c179082cdd91a04a344b769de375beb7ce773a8a16d6f83
+MISC ChangeLog 4338 SHA256 8b161dad1de9b3f2175a6b1ffd9526f40f3529c59746d851e509799fb518a86b SHA512 071cd1e006767218928e830326923b19d13e0dfcb72c6ec8cea8ad35df423456adac3cc134ab9e0a708a0774b37fb2b349538d31001fa7ed0cff37d34046500d WHIRLPOOL 2bd346822ef637307362030f75d86a4d27d0e588044a31a5225917d10e6d8acd3888d5506a646549f08786938302e390aee49092e6ac3189ecbcf1c5b73cca87
 MISC metadata.xml 238 SHA256 5067624ed45f021ddec2e6cda0ac3cddd1fe3fe6e1c40b3ecf73edaff95d8548 SHA512 2579f3be08591bff0d81bb86448d3c1c707478879be5f315b02ccb0651318ac919df55d9683dc353829f6fc71eef3927570b6e05275d8e1de240d62afdf1ccbb WHIRLPOOL c8825c9625f0480ab66550f3f0bcc003bdd0706ad0cf2f7142b4c649df2c94ae47d980376163304aefcc03b920ee59f7a530282429c0e2ee8a5605e8499e7bb7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCAAGBQJQ0r/VAAoJEEqz6FtPBkyj+McH/3dhMFR/2Ypw/1m+bdLngIfK
-uYcFCz+BfRp1WLcDYtuMvmLw0HuImSPh4G5O/Kd9hIdjPhq43vld/1Lkzl6s0OXv
-xAXpB/JGOhNCqT6nYCLC0VbI5vVuoJW/CPM4h42jta7bfixyw/SsB9ZOPIk7rheL
-elhLCfXH1dPXUQSPgGvRyJkM3X0o++Uk3xN+u0BX1csBzmj6A5dA/OMCDSQGkwW1
-lykZMjcUfPJIXfXdeYkKkpKJSI5Tzvhsov/7Aow5rZZ/ibizlJ8w9PZfVor7Pl3p
-oKqKK7kDLoxMNx5YbfnLGnpsl/jyKWNuDY0OnzPTTRmmlWZ2QlEaHUHYVAra3wY=
-=nVI1
+iQEcBAEBCAAGBQJQ0sAwAAoJEEqz6FtPBkyjPHAH/2gw8jwV8sOdztr6J7c/PjVn
+CONqe9LcLNrEHpYsnkTf6qR1cn1CQ0BG/5h1B0bAOlbfXkk3kD2ycLcQssmXO/gH
+X4BkD32tUPr5Jv39HmCtMQyexE8aPoCaCSv4HY/mn15KGIXr8l4MGVYLvYe4AxLI
+XLO6UtgZHDHFLkidpSZ9IhSkDfEVIQGRjVcrJObNk+j/IlMdC8T1eq/gbvWX68uG
+lAMmazms8hcewZoePZrRZ4KkFRoTsgZ0UejdCjrX9BnCqVrc4I+MM1vpYlNMVmav
+JgGkr8/ffQWbGuYGvMZaTHXqEUREwU05GYMBqtWzpg6vvs5nyGsaQ6V/PcGsEag=
+=w6OZ
 -----END PGP SIGNATURE-----
