@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/httplib2
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/httplib2/ChangeLog,v 1.31 2012/12/20 07:35:45 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/httplib2/ChangeLog,v 1.32 2012/12/20 07:37:19 radhermit Exp $
+
+  20 Dec 2012; Tim Harder <radhermit@gentoo.org> -httplib2-0.7.1.ebuild,
+  -httplib2-0.7.2.ebuild, -httplib2-0.7.4.ebuild:
+  Remove old.
 
 *httplib2-0.7.7 (20 Dec 2012)
 
